--- a/security.html
+++ b/security.html
@@ -40,15 +40,15 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://boards.greenhouse.io/corelight/jobs/1934385'>Job Application for Network Security Software Engineer at Job Board</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, California  San Francisco Columbus</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/corelight/jobs/1938984'>Job Application for Network Security Software Engineer at Job Board</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Santa Clara, California  San Francisco Columbus</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=obzf8fwR&__jvst=Employee&__jvsd=sIMG2hwY&__jvsc=Twitter&bid=nytppMw6'>Smarsh India Careers - Systems Security Engineer (Position Code: Security Engineer)</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=obzf8fwR&__jvst=Employee&__jvsd=sIMG2hwY&__jvsc=Twitter&bid=nytppMw6'>Smarsh India Careers - Systems Security Engineer (Position Code: Security Engineer)</a></h5> 
+<p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://venable.recruiterbox.com/jobs/fk03ozl/'>
@@ -65,7 +65,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/druva/c1504dea-ec35-41cc-a0c7-b766d01236f3'>Druva - Security Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/druva/c1504dea-ec35-41cc-a0c7-b766d01236f3'>Druva - Security Analyst</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -97,7 +97,7 @@
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oCg8afwU&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nYeipMwa'>Imperva Careers - Cloud Security Engineer, Managed Services</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oCg8afwU&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nYeipMwa'>Imperva Careers - Cloud Security Engineer, Managed Services</a></h5> 
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -109,7 +109,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/vibrenthealth/job/og9sbfwM'>Vibrent Health Careers - Sr. Security Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/vibrenthealth/job/og9sbfwM'>Vibrent Health Careers - Sr. Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -137,11 +137,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/security/security-engineer-cloud-architecture-staff-principal-1027745/?gh_src=82a8057f1'>Security Engineer, Cloud Architecture (Staff/Principal) | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/security/security-engineer-cloud-architecture-staff-principal-1027745/?gh_src=82a8057f1'>Security Engineer, Cloud Architecture (Staff/Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bai-inc/8cb0cddf-b200-4039-bbb4-cb0b49adb103'>Bai Inc. - Security Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bai-inc/8cb0cddf-b200-4039-bbb4-cb0b49adb103'>Bai Inc. - Security Analyst</a></h5> 
 <p><span class="badge badge-light">Washington, DC  Washington, DC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -214,7 +214,7 @@ tools and services; Work closely with developers to give advice on secure?...</p
 <p><span class="badge badge-light">San Diego, California  Carmel, Indiana</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.mcgill.co.uk/about-us/careers/security-engineer-aberdeen'>Security Engineers (Aberdeen &amp; Dundee) | McGill</a></h5> 
+<h5><a href='https://www.mcgill.co.uk/about-us/careers/security-engineer-aberdeen'>Security Engineers (Aberdeen &amp; Dundee) | McGill</a></h5> 
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -353,7 +353,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/grindr/jobs/1916136'>Job Application for Security Operations Engineer at Grindr</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/grindr/jobs/1916136'>Job Application for Security Operations Engineer at Grindr</a></h5> 
 <p><span class="badge badge-light">West Hollywood</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -429,7 +429,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Dahlgren, VA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://earlstreet.co.uk/jobs/permanent/trainee-security-systems-engineers/'>Trainee Security Systems Engineer|Earl St|Job Recruitment Maidstone : Earlstreet Employment Consultants</a></h5> 
+<h5><a href='https://earlstreet.co.uk/jobs/permanent/trainee-security-systems-engineers/'>Trainee Security Systems Engineer|Earl St|Job Recruitment Maidstone : Earlstreet Employment Consultants</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
